Added an form item for a user's name

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
   <form id="" action="index.html" method="post">
-    <ol>
+    <ol id="form-content">
       <li>
+        <label for="name">Name: </label>
+        <input type="text" name="name" placeholder="John Doe" id="name" />
       </li>
-      <li></li>
     </ol>
   </form>
 
