--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -14,6 +14,10 @@
         <label for="name">Name: </label>
         <input type="text" name="name" placeholder="John Doe" id="name" />
       </li>
+      <li>
+        <label for="dob">Date of Birth: </label>
+        <input type="date" name="dob" placeholder="mm/dd/yyyy" id="dob"/>
+      </li>
     </ol>
   </form>
 
