--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -18,6 +18,10 @@
         <label for="dob">Date of Birth: </label>
         <input type="date" name="dob" placeholder="mm/dd/yyyy" id="dob"/>
       </li>
+      <li>
+        <label for="tel"> Phone Number: </label>
+        <input type="tel" name="tel" placeholder="555-555-5555" id="tel"/>
+      </li>
     </ol>
   </form>
 
