Added form item for user's email

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -22,6 +22,10 @@
         <label for="tel"> Phone Number: </label>
         <input type="tel" name="tel" placeholder="555-555-5555" id="tel"/>
       </li>
+      <li>
+        <label for="email">Email: </label>
+        <input type="email" name="email" placeholder="JohnDoe@example.com">
+      </li>
     </ol>
   </form>
 
