Adjusted form id and attributes

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -8,23 +8,23 @@
   <link rel="stylesheet" href="//basehold.it/22" />
 </head>
 <body>
-  <form id="" action="index.html" method="post">
+  <form id="signup-form" action="#null" method="get">
     <ol id="form-content">
       <li>
-        <label for="name">Name: </label>
+        <label for="name">Name </label>
         <input type="text" name="name" placeholder="John Doe" id="name" />
       </li>
       <li>
-        <label for="dob">Date of Birth: </label>
+        <label for="dob">Date of Birth </label>
         <input type="date" name="dob" placeholder="mm/dd/yyyy" id="dob"/>
       </li>
       <li>
-        <label for="tel"> Phone Number: </label>
+        <label for="tel"> Phone Number </label>
         <input type="tel" name="tel" placeholder="555-555-5555" id="tel"/>
       </li>
       <li>
-        <label for="email">Email: </label>
-        <input type="email" name="email" placeholder="JohnDoe@example.com">
+        <label for="email">Email </label>
+        <input type="email" name="email" placeholder="JohnDoe@example.com" />
       </li>
     </ol>
   </form>
