Added form item to submit the form

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -26,6 +26,9 @@
         <label for="email">Email </label>
         <input type="email" name="email" placeholder="JohnDoe@example.com" />
       </li>
+      <li>
+        <input type="submit" value="Complete Sign Up!" />
+      </li>
     </ol>
   </form>
 
