--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -32,7 +32,7 @@
       </li>
     </ol>
   </form>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="site.js"></script>
 </body>
 </html>
