Added a id to the form item dob for easy accessing

--- a/pp-01/index.html
+++ b/pp-01/index.html
@@ -15,7 +15,7 @@
         <label for="name">Name </label>
         <input type="text" name="name" placeholder="John Doe" id="name" />
       </li>
-      <li>
+      <li id="form-item-dob">
         <label for="dob">Date of Birth </label>
         <input type="date" name="dob" placeholder="mm/dd/yyyy" id="dob"/>
       </li>
